add cookies and more

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,6 +24,9 @@ ul{
     -webkit-text-stroke: 1px white;
     color: transparent;
   }
+  .pointer{
+    cursor: pointer;
+  }
   
   ::selection {
     color: white;
